tests/NormalTests/paczka2/big_fuzzy/47648906.err
Error in line 2: QZY2BTtsAw S271 93,1
Error in line 6: 3Km A701 11,5
Error in line 14: 8mlqh3 S271 30,0
Error in line 24: 3Km A715 30,5
Error in line 58: A701 A715 86,5
Error in line 55: Cxap7 A715 19,5
Error in line 70: 3Km S271 55,1
Error in line 46: xs9Eo80 A325 4,8
Error in line 79: nZh6dpL A701 4,0
Error in line 73: xs9Eo80 A701 32,8
Error in line 69: Cxap7 S271 32,5
Error in line 114: Cxap7 A715 192,08
Error in line 95: QZY2BTtsAw A325 182,7
Error in line 118: A701 A701 6,3
Error in line 108: Cxap7 A715 61,2
Error in line 123: Cxap7 A701 62,2
Error in line 133: A701 S271 -2,14
Error in line 127: A701 S271 82,1
Error in line 146: QZY2BTtsAw A701 62,6
Error in line 143: xs9Eo80 A701 61,1
Error in line 149: xs9Eo80 S271 28,1
Error in line 158: QZY2BTtsAw A701 50,5
Error in line 132: nZh6dpL A715 273,1
Error in line 163: QZY2BTtsAw A325 64,5
Error in line 171: QZY2BTtsAw A701 80,2
Error in line 183: A701 A325 27,6
Error in line 186: A701 S271 914,5
Error in line 203: QZY2BTtsAw S271 17,3
Error in line 212: 8mlqh3 A325 34,9
Error in line 206: nZh6dpL A701 109,5
Error in line 218: 8mlqh3 A715 68,4
Error in line 224: nZh6dpL S271 25,2
Error in line 225: nZh6dpL A701 0,5
Error in line 248: 3Km A715 179,8
